# text-summary

./: README.md  pyproject.toml  requirements.txt
src/: main.py
src/code_summarization/: main_java.py  main_py.py  main_tree_sitter.py  tree_sitter_queries.py  tree_sitter_utils.py
src/code_summarization/examples/java/: Main.java
src/code_summarization/examples/py/: fibonacci.py
src/eval/: main.py
src/extractive_summarization/: main.py
src/extractive_summarization/examples/: example.txt
